--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
           <title>Personal Website Andre Haupt</title>
     </head>
     <body>
+        <header>
+            We
+        </header>
         
     </body>
 </html>
