--- a/index.html
+++ b/index.html
@@ -7,9 +7,85 @@
           <title>Personal Website Andre Haupt</title>
     </head>
     <body>
-        <header>
-            We
-        </header>
-        
+        <table border="0" width="750px" bgcolor="#CCFF33"> <!--Tabelle-->
+            <tbody>
+                <tr> <!--1. Zeile Tabelle-->
+                    <td colspan="2"> <!--Spalte 1-->
+                        <h1>Willkommen auf meiner privaten Website</h1>
+                    </td>
+                </tr>
+                <tr> <!--2. Zeile Tabelle CGN Bild-->
+                    <td colspan="2"> <!--Spalte 1-->
+                        <img src="/pictures/cologne-skyline.jpg" width="750" height="205" alt="lq_head750 (43K)">
+                    </td>
+                </tr>
+                <tr> <!--3. Zeile Tabelle mit 2 Untertabellen-->
+                    <td width="150px" valign="top"> <!--1. Spalte-->
+                        <table border="1" bgcolor="#33CCFF" cellpadding="10" width="100%"> <!--Untertabelle der 1. Spalte-->
+                            <tbody>
+                                <tr> <!--1. Zeile Untertabelle-->
+                                    <td>Über mich</td>
+                                </tr>
+                                <tr> <!--2. Zeile Untertabelle-->
+                                    <td><a href="../">Beispiele</a></td>
+                                </tr>
+                                <tr> <!--3. Zeile Untertabelle-->
+                                    <td>Lebenslauf</td>
+                                </tr>
+                                <tr> <!--4. Zeile Untertabelle-->
+                                    <td>Funstuff</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                    <td valign="top"> <!--2. Spalte-->
+                        <table border="1" width="100%" bgcolor="#FF6633">
+                            <tbody>
+                                <tr> <!--1. Zeile-->
+                                    <td width="50%" valign="top"> <!--1. Zeile 1 Spalte-->
+                                        Welcome to my Website.<br 7>
+                                        <br />
+                                        Here u get all the important informations about me.
+                                    </td>
+                                    <td width="50%" valign="top"> <!--1. Zeile 2. Spalte-->
+                                       Please be gentle with judging about this Website ist my first selfmade projekt.
+                                    </td>
+                                </tr>
+                                <tr> <!--2. Zeile-->
+                                    <td valign="top"> <!--2. Zeile 1. Spalte-->
+                                        <img src="/pictures/apalicationpic.JPG" width="290" height="320" alt="profilepicture">
+                                    </td>
+                                    <td valign="top"> <!--2. Zeile 2. Spalte-->
+                                        Thats me in the serious mood.
+                                    </td>
+                                </tr>
+                                <tr> <!--3. Zeile-->
+                                    <td valign="top"> <!--3. Zeile 1. Spalte-->
+                                        This is me in the unserious mood.<br />
+                                        Bad hair day is also included here.
+                                    </td>
+                                    <td valign="top"> <!--3. Zeile 2. Spalte-->
+                                        <img src="/pictures/unserious.jpg" width="270" height="350" alt="unserious-mood">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+                <tr> <!--4. Zeile Footer-->
+                    <td colspan="2">
+                        Here u can find me aswell.
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <a href="https://www.instagram.com/4ndre.haupt/"><img src="/pictures/Instagram_icon2.jpg" width="50" height="50" alt="instagram_icon"></a>
+                        <a href="https://www.facebook.com/andre.haupt.3/"><img src="/pictures/facebook_icon2.jpg" width="50" height="50" alt="facebook_icon"></a>
+                        <a href="https://github.com/AndreHaupt85"><img src="/pictures/github_icon.png" width="100" height="50" alt="github_icon"></a>
+                        <a href="https://www.amazon.de/hz/wishlist/ls/1I8ZIJOQYY7TI?ref_=wl_share"><img src="/pictures/amazon-wishlist-icon.png" width="170" height="50" alt="amazon_wishlist_icon"></a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
