add menu hyperlinks

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                         <table border="1" bgcolor="#33CCFF" cellpadding="10" width="100%"> <!--Untertabelle der 1. Spalte-->
                             <tbody>
                                 <tr> <!--1. Zeile Untertabelle-->
-                                    <td>Über mich</td>
+                                    <td><a href="/aboutme.hmtl">Über mich</a></td>
                                 </tr>
                                 <tr> <!--2. Zeile Untertabelle-->
                                     <td><a href="../">Beispiele</a></td>
                                 </tr>
                                 <tr> <!--3. Zeile Untertabelle-->
-                                    <td>Lebenslauf</td>
+                                    <td><a href="/cv.html">Lebenslauf</a></td>
                                 </tr>
                                 <tr> <!--4. Zeile Untertabelle-->
-                                    <td>Funstuff</td>
+                                    <td><a href="/funstuff.html">Funstuff</a></td>
                                 </tr>
                             </tbody>
                         </table>
