--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                     </td>
                 </tr>
                 <tr> <!--4. Zeile Footer-->
-                    <td colspan="2">
+                    <td colspan="2"> <!--Social Media Links Einleitung-->
                         Here u can find me aswell.
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="2">
+                    <td colspan="2"> <!-- Socialmedia Links-->
                         <a href="https://www.instagram.com/4ndre.haupt/"><img src="/pictures/Instagram_icon2.jpg" width="50" height="50" alt="instagram_icon"></a>
                         <a href="https://www.facebook.com/andre.haupt.3/"><img src="/pictures/facebook_icon2.jpg" width="50" height="50" alt="facebook_icon"></a>
                         <a href="https://github.com/AndreHaupt85"><img src="/pictures/github_icon.png" width="100" height="50" alt="github_icon"></a>
