--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <tbody>
                 <tr> <!--1. Zeile Tabelle-->
                     <td colspan="2"> <!--Spalte 1-->
-                        <h1>Willkommen auf meiner privaten Website</h1>
+                        <h1>Welcome to my private Website</h1>
                     </td>
                 </tr>
                 <tr> <!--2. Zeile Tabelle CGN Bild-->
@@ -21,16 +21,16 @@
                 </tr>
                 <tr> <!--3. Zeile Tabelle mit 2 Untertabellen-->
                     <td width="150px" valign="top"> <!--1. Spalte-->
-                        <table border="1" bgcolor="#33CCFF" cellpadding="10" width="100%"> <!--Untertabelle der 1. Spalte-->
+                        <table border="0" bgcolor="#33CCFF" cellpadding="10" width="100%"> <!--Untertabelle der 1. Spalte-->
                             <tbody>
                                 <tr> <!--1. Zeile Untertabelle-->
-                                    <td><a href="/aboutme.hmtl">Über mich</a></td>
+                                    <td><a href="/aboutme.html">About me</a></td>
                                 </tr>
                                 <tr> <!--2. Zeile Untertabelle-->
-                                    <td><a href="../">Beispiele</a></td>
+                                    <td><a href="mailto:andrehaupt@me.com">How to contact me</a></td>
                                 </tr>
                                 <tr> <!--3. Zeile Untertabelle-->
-                                    <td><a href="/cv.html">Lebenslauf</a></td>
+                                    <td><a href="/cv.html">CV</a></td>
                                 </tr>
                                 <tr> <!--4. Zeile Untertabelle-->
                                     <td><a href="/funstuff.html">Funstuff</a></td>
@@ -39,7 +39,7 @@
                         </table>
                     </td>
                     <td valign="top"> <!--2. Spalte-->
-                        <table border="1" width="100%" bgcolor="#FF6633">
+                        <table border="0" width="100%" bgcolor="#FF6633">
                             <tbody>
                                 <tr> <!--1. Zeile-->
                                     <td width="50%" valign="top"> <!--1. Zeile 1 Spalte-->
